--- a/TODO
+++ b/TODO
@@ -1,10 +1,10 @@
 ===========
 PROCHAINS JOURS
 ===========
-	-- Améliorer séparation client/serveur
 	-- Tester connectivité avec les différentes positions des barres
 	-- Ajouter restriction des joueurs à certaines barres
 	-- Améliorer la représentation du choix de la barre
+	-- Pas oublier suppression partie quand un joueur quitte une liste d'attente, une création de partie etc.
 	
 ===========
 GAMEPLAY
