MAJ du rapport.

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -105,15 +105,17 @@ Gère le menu principal affiché après connexion. Contient les boutons qui mèn
 \paragraph{NewPanel.java}
 Lorsque l'on lance une nouvelle partie, on obtient cet écran qui contiendra les principales options nécessaires pour configurer une partie puis l'ouvrir à des joueurs extérieurs. Une fois cette partie ouverte, on aboutit à une \emph{salle d'attente} gérée par WaitingRoomPanel.
 \paragraph{ServersPanel.java}
-Gère la liste des parties actuellement en recherche de joueurs lorsque l'on cherche à rejoindre une partie. On sélectionne une partie dans cette liste puis on aboutit à une \emph{salle d'attente}.
+Gère la liste des parties actuellement en recherche de joueurs lorsque l'on cherche à rejoindre une partie. On sélectionne une partie dans cette liste puis on aboutit à une \emph{salle d'attente}. La liste ne se rafraichit pas automatiquement mais un bouton est disponible en bas de page pour le faire.
 \paragraph{WaitingRoomPanel.java}
-Une fois la partie configurée et ouverte, on aboutit dans cette salle d'attente qui attendra que certaines conditions soient réunies pour permettre au jeu d'être commencé. On peut \emph{aussi} y accéder depuis la partie \emph{rejoindre une partie}.
+Une fois la partie configurée et ouverte, on aboutit dans cette salle d'attente qui attendra que certaines conditions soient réunies pour permettre au jeu d'être commencé. On peut \emph{aussi} y accéder depuis la partie \emph{rejoindre une partie}. Il est alors possible d'utiliser le chat pour discuter avec les autres joueurs.
 \paragraph{GamePanel.java}
-La partie à proprement parler. Donc le conteneur du dessin du terrain qui gère les éléments extérieurs, les événements et toute autre interaction avec le reste du code. Inclut la zone de dessin décrite ci-dessous.
+La partie à proprement parler. Donc le conteneur du dessin du terrain qui gère les éléments extérieurs, les événements et toute autre interaction avec le reste du code. Inclut la zone de dessin décrite ci-dessous, le panel de chat dans la partie de droite et le panel d'informations sur le match dans celle de gauche.
 \paragraph{GameZone.java}
-Zone de dessin chargée de représenter le terrain, les joueurs, etc. Fichier assez conséquent puisqu'il contient toute la gestion de l'affichage et des données liées aux déplacements. Toutes les informations, les calculs sont effectués par le serveur et envoyées.
+Zone de dessin chargée de représenter le terrain, les joueurs, etc. Fichier assez conséquent puisqu'il contient toute la gestion de l'affichage et des données liées aux actions, déplacements pouvant être effectués par les joueurs sur le jeu. Toutes les informations, les calculs sont effectués par le serveur et envoyées au client qui, via cette classe, se charge de les concrétiser en affichant le jeu. L'affichage est géré par un Thread bien évidemment qui s'occupe de refaire une demande d'actualisation au serveur et affiche les données qu'il possède après la demande, quitte à être en retard d'un tour d'horloge. Ce fichier contient aussi la classe InfoZone qui affiche les informations (score, état) sur le match et donne la possibilité de mettre le jeu en pause et de le supprimer.
 \paragraph{ChatPanel.java}
 Une partie un peu à part qui est chargée de gérer l'affichage du chat. Celui-ci sera présent à de nombreux endroits : la liste des parties disponibles, la salle d'attente, la création d'une partie et durant le jeu lui-même. Or, tous ces affichages sont centralisés dans cet unique fichier qui centralise ainsi le traitement et l'affichage et permet de réutiliser à plusieurs endroits ces données.
+\paragraph{SettingsPanel.java}
+Cette classe assez light donne la possibilité de configurer les options du jeu. Je n'ai pas pris le temps d'en configurer beaucoup et il n'est pour l'instant disponible que la modification de sensibilité du jeu. Un démonstrateur a d'ailleurs été inclus à côté des boutons de modification pour tester la sensibilité. Deux boutons sont ensuite possibles : un qui sauvegarde la modification de sensibilité et un autre qui la sauvegarde et revient au menu principal simultanément.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -369,6 +371,15 @@ Aucune base de données n'a finalement été utilisée. Le serveur stocke donc s
 \paragraph{}
 Le réseau est au coeur de mon projet et j'ai donc développé plusieurs Thread en parallèle pour pouvoir gérer plus facilement l'envoi de messages par mon application.
 Il a fallu mettre au point une nomenclature des messages afin d'obtenir successivement le type de message envoyé et le domaine qui est atteint, donc la classe effectuant le traitement de la requête, puis le joueur concerné (c'est le login qui est utilisé ici bien qu'un système d'ID aurait pu être mis en place) et enfin les données propres à la requête.
+\paragraph{}
+De plus, le serveur recevant un grand nombre de requêtes, j'ai séparé le serveur en plusieurs entités afin de faciliter le traitement. On trouve ainsi une classe dédiée entièrement à la gestion du Chat et des requêtes échangées. Il y a aussi un serveur se chargeant de gérer les joueurs et enfin, le plus gros des trois, un serveur s'occupant des requêtes de jeux. Il est assez sollicité puisqu'une requête est envoyée aux 2, 3, 4 clients toutes les 20 ms environ (un peu plus parfois). Ces requêtes peuvent être assez longues puisqu'elles contiennent de nombreuses informations : la position des barres, leur statut (normal, levée, tirant) ce qui représente 16 coordonnées puis les huit barres.
+\section{La gestion des barres}
+\paragraph{}
+Un point a été intéressant du point de vue algorithmique, c'est la gestion des barres. Suivant le type de match, un joueur a accès à certaines barres. Par exemple, quand il est seul contre deux joueurs, il a accès à toutes les barres. Par contre, s'il n'est pas seul, le calcul est fait automatiquement selon l'ordre d'arrivée des joueurs dans la partie. Ce qui a été intéressant, c'est de trouver une façon de stocker ces informations. Il fallait ici obtenir une méthode simple pour définir \og l'utilisation \fg des barres, lesquelles sont occupées et lesquelles sont libres. Ce problème est très similaire à un problème d'autorisations et de droits. En effet, a-t-on le droit ou non de bouger les barres ?
+\paragraph{}
+Pour cela, ma technique a été très simple, c'est d'utiliser la notation pour binaire et associer à chaque bit une autorisation particulière. Je code ici les autorisations sur quatre bits, chacun représentant deux barres, d'un côté ou d'un autre. Ainsi, les deux premiers bits (valeurs correspondant à \(2^0\) et \(2^1\)) correspondent aux barres du bas et les deux autres à celles du haut. Lorsque le statut des barres est actualisé, \emph{i.e. } qu'un joueur entre dans la partie, cet entier est testé pour situer dans quel cas se situe le jeu et où des barres sont disponibles puis l'entier d'utilisation est mis à jour en ajoutant 1, 2, 3, 4, etc. pour signifier quelles barres va prendre le joueur. De même lorsqu'un joueur quitte la partie, l'entier voit sa valeur soustraite par celle représentant le joueur. On a ainsi une façon simple d'accéder à la possibilité pour un joueur de toucher à une barre puisqu'il s'agit d'utiliser les opérateurs binaires pour tester une autorisation. Ce nombre est stocké par le serveur et est transmis très facilement aux clients qui stockent eux les autorisations dans une Hashtable.
+\paragraph{}
+Il eut été possible de s'affranchir de toutes ces considérations en réalisant un écran supplémentaire avant le début de la partie où le joueur hôte de la partie aurait tout simplement assigné telle ou telle barre à tel ou tel joueur. La gestion se serait alors faite avec une Hashtable contenant des noms de joueurs par exemple. Il aurait été toutefois intéressant de stocker la même information de \og l'utilisation \fg des barres afin de vérifier que toutes les barres ont bien été assignées à quelqu'un.
 \section{La gestion du jeu}
 \paragraph{}
 Pour calculer la position de la balle au cours du temps, j'ai utilisé un Thread qui s'actualise toutes les 10ms et qui effectue à chaque tour d'horloge
